--- a/.gitignore
+++ b/.gitignore
@@ -81,6 +81,7 @@ flycheck_*.el
 # Gradle
 .idea/**/gradle.xml
 .idea/**/libraries
+.idea/
 
 # Gradle and Maven with auto-import
 # When using Gradle or Maven with auto-import, you should exclude module files,
@@ -167,3 +168,4 @@ fabric.properties
 
 # End of https://www.toptal.com/developers/gitignore/api/goland,emacs
 
+rhymes
